# generic-timeseries

./: pyproject.toml
generic_timeseries/: __main__.py  predictor.py  sarimax.py  time_series.py  types.py
