[tool.poetry]
name = "generic-timeseries"
version = "0.1.0"
description = "An example using genric classes in time series analysis"
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
mdweek = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
